--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello
+<!doctype html>
+<html>
+  <head>
+    <title>The Shop</title>
+    <style>
+    html {
+      width:100%;
+      height:100%;
+      background: #ffffff url(attheshop.gif) center center no-repeat;
+    }
+    </style>
+  </head>
+</html>
